Wed, 21 Sep 2005, Daniel R. Fisher

1. Added the capability to calculate one electron density in
   addition to electron pair density histograms.  To calculate all
   electron densities, set the write_electron_densities flag to 1.
   This replaces the write_pair_densities flag.
2. Changed the way the histograms are normalized when they are written
   out.
3. Added the capability to use unrestricted trial functions in the SCF
   part of the wavefunction.  Unrestricted trial functions can be
   generated with Jaguar or GAMESS.  This will result in a .ckmf file
   in which the alpha and beta orbitals have different coefficients.
   The old input files can still be used. 

Wed, 14 Sep 2005, Daniel R. Fisher

1. Fixed a sign error in FixedCuspPadeCorrelationFunction.cpp

Thurs, 8 Sep 2005, Daniel R. Fisher
1. Changed the way that the distances for the pair density histograms 
   are written.  Previously, the bins were labeled by their greatest
   distance, which caused problems at small distances.  Now, they are
   labeled by their midpoint.

Thurs, 8 Sep 2005, Amos Anderson
1. I submitted all my GPUQMC code. So far, it only works on Windows
   with Visual Studio or cygwin. Use --gpu with configure.py and look
   at the lib/README for library set up guides.
2. Several more classes have the "streaming" capability. This includes
   QMCJastrow and QMCPotential_Energy.
3. The code can now use LAPACK to calculate the inverse, but it does not
   add much improvement. Use --lapack with configure.py.
4. I changed the MPI constants in QMCRun.h to be prefixed with QMC_ because
   the other ones were conflicting with something in the Windows API.
5. For compatibility with Intel's Vtune's Call Graph, configure.py now
   accepts --vtune. This sets profiling parameters to emulate Visual
   Studio's /fixed:no.
6. There are several vtune identified performance enhancements. Most of
   them were simply moving memory allocations outside of loops.